# install-linux

./: .mypy.ini  MAINTAINER.md  README.md  extract.py  helpers.sh  install-fedora-packages.sh  install-linux.md  install-ubuntu-packages.sh  noxfile.py  pyproject.toml  requirements.txt  run.sh  use-linux.md
ex-install-linux-local/: README.md  accounts.yml  ansible-hosts.yml  ansible.cfg  base.yml  bootstrap.yml  firefox-tarball.yml  google-chrome.yml  home.yml  install-fedora-packages.sh  install-linux-local.md  install-ubuntu-packages.sh  local-accounts.yml  local-passwords.yml  localhome.yml  mozilla-ppa.yml  neovim.yml  noxfile.py  pyproject.toml  remove-snaps.yml  root-password.yml  root-ssh-authorized_key.yml  run.sh  some_user-password.yml  ubuntu-zfs-README.md  ubuntu-zfs-format-HOST.yml  ubuntu-zfs-prepare.yml  ubuntu-zfs-system-installation.yml  user-disable-kscreen.yml  user-plasma.yml  user-root-git-repos.yml  user-rust.yml  user-workstation.yml  workstation-mounts.yml  workstation.yml
ex-install-linux-local/machines/: casey.md  mobi.md
ex-install-linux-local/roles/local-base/files/: ssh_config.d-10-dewalt.conf  ssh_config.d-10-dewaltguest.conf
ex-install-linux-local/roles/local-base/tasks/: extracted.yml
roles/ansible-user-register/tasks/: main.yml
roles/base/files/: echod  pipxg  ssh_config.d-10-github.conf  ssh_config.d-90-general.conf  sshd_config.d-90-accept-env.conf
roles/base/tasks/: extracted.yml  main.yml  packages-fedora.yml  packages-proxmox.yml  packages-ubuntu.yml
roles/disable-apt-daily/tasks/: extracted.yml  main.yml
roles/docker/defaults/: main.yml
roles/docker/tasks/: extracted.yml
roles/echod/files/: echod
roles/echod/tasks/: extracted.yml
roles/firefox-tarball/tasks/: main.yml
roles/force-limit-switch/tasks/: main.yml
roles/home-golang/tasks/: extracted.yml
roles/home-google-chrome/tasks/: extracted.yml
roles/home-user-plasma/tasks/: extracted.yml
roles/home/tasks/: extracted.yml  main.yml  packages-fedora.yml  packages-ubuntu.yml
roles/localhome/files/: etc-cron.d-localhome-migrate  localhome-migrate.sh
roles/localhome/tasks/: main.yml
roles/mox-base/tasks/: extracted.yml  packages-fedora.yml  packages-proxmox.yml  packages-ubuntu.yml
roles/mox-nfs-server/tasks/: extracted.yml  main.yml  packages-proxmox.yml
roles/mox-repos/tasks/: extracted.yml  main.yml
roles/mozilla-ppa/files/: mozillateam.asc
roles/mozilla-ppa/tasks/: extracted.yml  main.yml
roles/neovim/tasks/: extracted.yml  main.yml  packages-fedora.yml  packages-ubuntu.yml
roles/passwordless-sudo/tasks/: main.yml
roles/pipxg/tasks/: main.yml
roles/remove-snaps/tasks/: main.yml
roles/serverbase/files/: uvtoolg
roles/serverbase/tasks/: extracted.yml  packages-fedora.yml  packages-ubuntu.yml
roles/ssh-authorized_key/tasks/: main.yml
roles/ubuntu-zfs-format/tasks/: main.yml
roles/ubuntu-zfs-prepare/tasks/: main.yml
roles/ubuntu-zfs-system-installation/tasks/: main.yml
roles/user-disable-kscreen/tasks/: main.yml
roles/user-git-repos/tasks/: main.yml
roles/user-plasma/tasks/: extracted.yml
roles/user-rust/defaults/: main.yml
roles/user-rust/tasks/: extracted.yml  main.yml
roles/user-workstation/tasks/: extracted.yml  main.yml
roles/work/tasks/: main.yml  packages-fedora.yml  packages-ubuntu.yml
roles/workstation/files/: firefox-policies.json
roles/workstation/tasks/: extracted.yml  main.yml  packages-fedora.yml  packages-ubuntu.yml
src/install_linux/: extract.py  helpers.py
