[project]
name = "install-linux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Henry", email = "drmikehenry@drmikehenry.com" }
]
requires-python = ">=3.9"
dependencies = [
    "marko==1.2.1",
    "pyyaml==6.0.1",
]

[project.scripts]
extract = "install_linux.extract:main"
extract_ubuntu_packages = "install_linux.helpers:extract_ubuntu_packages"
extract_fedora_packages = "install_linux.helpers:extract_fedora_packages"
build_pandoc = "install_linux.helpers:build_pandoc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.7.1",
    "pylint>=3.2.7",
]
nox = [
    "nox>=2024.10.9",
    "tomli>=2.0.2",
]
test = [
    "pytest>=8.3.3",
]
type-check = [
    {include-group = "nox"},
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20240917",
]
dev = [
    {include-group = "lint"},
    {include-group = "nox"},
    {include-group = "test"},
    {include-group = "type-check"},
]

##############################################################################
# Source formatting

[tool.black]
line-length = 79
target-version = ["py38"]

##############################################################################
# Style checking

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "N811",
    "N812",
    "N813",
    "N814",
]
select = [
    "C9",
    "E",
    "F",
    "N",
    "Q",
    "W",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 15

##############################################################################
# Type checking

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "gnupg"
]
ignore_missing_imports = true

##############################################################################
# Coverage support

[tool.coverage.run]
branch = true
