[project]
name = "install-linux-local"
version = "0.1.0"
description = "Local tools for installing Linux"
readme = "README.md"
authors = [
    { name = "Michael Henry", email = "drmikehenry@drmikehenry.com" }
]
requires-python = ">=3.10"
dependencies = [
    "install_linux",
]

[project.scripts]
extract = "install_linux.extract:main"
extract_ubuntu_packages = "install_linux.helpers:extract_ubuntu_packages"
extract_fedora_packages = "install_linux.helpers:extract_fedora_packages"
build_pandoc = "install_linux.helpers:build_pandoc"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
install_linux = { path = "../install-linux" }

[dependency-groups]
dev = [
    "nox>=2024.10.9",
]
